--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
 
     {% include header.html %}
 
-        {{ content }}
+        {% comment %} {{ content }} {% endcomment %}
+        {% include anchor_headings.html html=content anchorBody="#" %}
 
     {% include footer.html %}
     {% include backToTop.html %}
