--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,7 @@
 
     {% include header.html %}
 
-        {% comment %} {{ content }} {% endcomment %}
-        {% include anchor_headings.html html=content anchorBody="#" %}
+        {{ content }}
 
     {% include footer.html %}
     {% include backToTop.html %}
