--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,4 +64,6 @@
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 {% endif %}
+
+{% seo %}
 </head>
