--- a/_includes/tag.html
+++ b/_includes/tag.html
@@ -2,12 +2,15 @@
   {% if post %}
     {% for tag in post.tags %}
         <a href="{{ root_url }}/{{ site.tag_dir }}#{{ tag }}" title="Tag: {{ tag }}" rel="tag">{{ tag | join: "/" }}</a>{% unless forloop.last %}&nbsp;{% endunless %}
-    {% endfor %}
+    {% endfor %} 
+    {% if post.published == false %}
+        <a href="#" title="Tag: {{ tag }}" rel="tag">Hidden</a>
+    {% endif %}
   {% else %}
     {% for tag in page.tags %}
         <!--a href="{{ root_url }}/{{ site.tag_dir }}#{{ tag | cgi_escape }}" title="Tag: {{ tag }}" rel="tag">{{ tag | join: "/" }}</a-->
         <a href="{{ root_url }}/{{ site.tag_dir }}#{{ tag }}" title="Tag: {{ tag }}" rel="tag">{{ tag | join: "/" }}</a>{% unless forloop.last %}&nbsp;{% endunless %}
-    {% endfor %}
+    {% endfor %} 
   {% endif %}
 {% endcapture %}
 <!-- <span class="point">•</span> -->
