--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,19 +36,19 @@
 
       ga('create', '{{site.google_analytics_id}}', 'auto');
       ga('send', 'pageview');
-
     </script>
 {% endif %}
 
-{% if site.google_adsense_id %}
-    <!-- google adsense -->
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "{{site.google_adsense_id}}",
-        enable_page_level_ads: true
-      });
-    </script>
+{% if site.google_tag_id %}
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{site.google_tag_id}}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', '{{site.google_tag_id}}');
+  </script>
 {% endif %}
 
 {% if page.mathjax %}
