--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,15 +54,10 @@
 {% if page.mathjax %}
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
-    TeX: {
-      equationNumbers: {
-        autoNumber: "AMS"
-      }
-    },
     tex2jax: {
       inlineMath: [ ['$','$'], ['\\(', '\\)'] ],
-      displayMath: [ ['$$','$$'] ],
-      processEscapes: true,
+      displayMath: [ ['$$','$$'], ['\\[', '\\]'] ],
+      processEscapes: false,
     }
   });
 </script>
