--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -1,3 +1,12 @@
+.clearfix:after {
+    content: "\200B";
+    display: block;
+    height: 0;
+    clear: both;
+}
+.clearfix {
+    *zoom: 1;
+}
 body,
 html,
 div,
