--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -6,3 +6,5 @@ layout: default
     {{content}}
 </div>
 <script src="{{ "/js/pageContent.js " | prepend: site.baseurl }}" charset="utf-8"></script>
+
+<script src="{{ "/js/carousel.js " | prepend: site.baseurl }}" charset="utf-8"></script>
